Task3
Demo component is available by path: '/demo'
HighLight directive work result is visible by clicking on:
  LocalStorage output block
  Options output block