@@ -1,12 +1,12 @@
 <div class="d-flex justify-content-between align-items-center">
   {{cartItem.product.name | uppercase}}
-  <div>
-    <span class="count badge badge-success text-center"
-          (click)="onAddItem()">&#10010;</span>
-    <span class="px-2 font-weight-bold">{{cartItem.count}}</span>
-    <span class="count badge badge-warning text-center"
-          (click)="onDeleteItem()">&ndash;</span>
-    <span class="delete badge badge-danger ml-3"
-          (click)="onDeleteProduct()">X</span>
+  <div class="d-flex justify-content-between w-50">
+    <span class="px-4">{{cartItem.product.price | currency : USD}} X</span>
+    <span>
+      <span class="count badge badge-success text-center" (click)="onAddItem()">&#10010;</span>
+      <span class="px-2 font-weight-bold">{{cartItem.count}}</span>
+      <span class="count badge badge-warning text-center" (click)="onDeleteItem()">&ndash;</span>
+      <span class="delete badge badge-danger ml-3" (click)="onDeleteProduct()">X</span>
+    </span>
   </div>
 </div>
