@@ -1,6 +1,16 @@
 <div class="jumbotron" *ngIf="cartItems.length; else emptyCart">
   <h4 class="display-6 text-secondary text-center font-weight-light">Shopping Cart</h4>
-  <ul class="cart-list list-group" *ngFor="let item of cartItems">
+  <div class="d-flex justify-content-between align-items-center px-3 cart-header">
+      <span (click)="sort('product;name')">
+          Name
+          <span>⇅</span>
+      </span>
+      <div class="d-flex justify-content-between w-50 px-2">
+        <span class="px-2 w-50 align-self-start" (click)="sort('product;price')">Price <span>⇅</span></span>
+        <span class="px-2 w-50 text-center" (click)="sort('count')">Count <span>⇅</span></span>
+      </div>
+    </div>
+  <ul class="cart-list list-group" *ngFor="let item of (cartItems | orderBy : 'product;name')">
     <li class="list-group-item">
       <app-cart-item [cartItem]="item"
                      (addItem)="addCartItem($event)"
@@ -9,7 +19,7 @@
     </li>
   </ul>
   <div class="d-flex justify-content-between align-items-center">
-    <p class="display-5 text-info pt-3" id="total">Total Sum: ${{totalSum}}</p>
+    <p class="display-5 text-info pt-3" id="total">Total Sum: {{totalSum | currency : USD}}</p>
     <p class="display-5 text-info pt-3" id="total">Total Count: {{totalCount}}</p>
   </div>
   <div class="d-flex justify-content-end align-items-center">
