@@ -6,7 +6,7 @@
       <span class="badge badge-pill" [ngClass]="{'badge-info': product.isAvailable,
     'badge-danger': !product.isAvailable}">{{product.isAvailable ? 'Available' : 'Unavailable'}}</span>
     </h5>
-    <p class="card-text">Price: ${{product.price}}</p>
+    <p class="card-text">Price: {{product.price | currency : USD}}</p>
     <button class="btn btn-primary w-100" [disabled]="!product.isAvailable" (click)="onBuy(product)">Buy</button>
   </div>
 </div>
